--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI ${{ inputs.script }}
+name: CI '$REGISTRY'
+
+env:
+  REGISTRY: ghcr.io
 
 # Controls when the workflow will run
 on:
