--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI '$REGISTRY'
+name: CI -- $REGISTRY
 
 env:
   REGISTRY: ghcr.io
